ExpressionParser API changes to make it extensible. 2009-08-04  Martin Baulig  <martin@ximian.com>
	* frontend/ExpressionParser.cs
	(ExpressionParser): Rename `MyExpression' -> `Expression' and make
	it public; rename `MyExpressionWrapper' -> `ExpressionWrapper' and
	make it public; rename `MyAsycResult' -> `AsyncResult' and make it
	public.

svn path=/trunk/debugger/; revision=139332

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2009-08-04  Martin Baulig  <martin@ximian.com>
 
+	* frontend/ExpressionParser.cs
+	(ExpressionParser): Rename `MyExpression' -> `Expression' and make
+	it public; rename `MyExpressionWrapper' -> `ExpressionWrapper' and
+	make it public; rename `MyAsycResult' -> `AsyncResult' and make it
+	public.
+
+2009-08-04  Martin Baulig  <martin@ximian.com>
+
 	* frontend/ExpressionParser.cs: New file.
 	(ExpressionParser): Moved here from Expression.cs.
 	(ExpressionParser.GetVariableAccessExpression): Added.
