--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
-**** Backport of 139302 ****
+2009-08-04  Martin Baulig  <martin@ximian.com>
+
+	* frontend/ExpressionParser.cs
+	(ExpressionParser): Rename `MyExpression' -> `Expression' and make
+	it public; rename `MyExpressionWrapper' -> `ExpressionWrapper' and
+	make it public; rename `MyAsycResult' -> `AsyncResult' and make it
+	public.
+
 2009-08-04  Martin Baulig  <martin@ximian.com>
 
 	**** Backport of 139302 ****
