Managed Callback optimizations .... 2009-08-05  Martin Baulig  <martin@ximian.com>
	* backend/SingleSteppingEngine.cs
	(SSE.ManagedCallback): If we found a managed frame, check whether
	we can do all the work immediately or whether we need to start an
	operation for it.

svn path=/trunk/debugger/; revision=139427

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2009-08-05  Martin Baulig  <martin@ximian.com>
 
+	* backend/SingleSteppingEngine.cs
+	(SSE.ManagedCallback): If we found a managed frame, check whether
+	we can do all the work immediately or whether we need to start an
+	operation for it.
+
+2009-08-05  Martin Baulig  <martin@ximian.com>
+
 	Support removing breakpoints while the target is running.
 
 	* backend/ProcessServant.cs
