--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
-**** Backport of 139425 ****
+2009-08-05  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 139427 ****
+
+	* backend/SingleSteppingEngine.cs
+	(SSE.ManagedCallback): If we found a managed frame, check whether
+	we can do all the work immediately or whether we need to start an
+	operation for it.
+
 2009-08-05  Martin Baulig  <martin@ximian.com>
 
 	**** Backport of 139425 ****
