--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-06  Martin Baulig  <martin@ximian.com>
+
+	* frontend/Command.cs:
+	(ConfigCommand): Add "redirect-output" here, this was missing.
+
 2009-08-05  Martin Baulig  <martin@ximian.com>
 
 	* backend/SingleSteppingEngine.cs
