--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-08-06  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 139477 ****
+
+	* frontend/Command.cs:
+	(ConfigCommand): Add "redirect-output" here, this was missing.
+
 2009-08-05  Martin Baulig  <martin@ximian.com>
 
 	**** Backport of 139427 ****
