--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-08-06  Martin Baulig  <martin@ximian.com>
 
+	* classes/DebuggerSession.cs
+	(DebuggerSession.ActivateEventAsync): New public method.
+	(DebuggerSession.DeactivateEventAsync): New public method.
+
+2009-08-06  Martin Baulig  <martin@ximian.com>
+
 	Don't require the target to be stopped to detach; allow detaching
 	from any target on Linux.
 
