Renamed 'TargetClassType' -> 'TargetStructType' and add empty 'TargetClassType'; same for 'TargetClassObject'. 2009-09-17  Martin Baulig  <martin@ximian.com>
	* languages/TargetClassType.cs: Renamed `TargetClassType' into
	`TargetStructType' and add a new empty `TargetClassType'.

	* languages/TargetClassObject.cs: Renamed `TargetClassObject' into
	`TargetStructObject' and add a new empty `TargetClassObject'.

svn path=/trunk/debugger/; revision=142112

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-09-17  Martin Baulig  <martin@ximian.com>
+
+	* languages/TargetClassType.cs: Renamed `TargetClassType' into
+	`TargetStructType' and add a new empty `TargetClassType'.
+
+	* languages/TargetClassObject.cs: Renamed `TargetClassObject' into
+	`TargetStructObject' and add a new empty `TargetClassObject'.
+
 2009-09-15  Martin Baulig  <martin@ximian.com>
 
 	* backend/mono/MonoRuntime.cs: Renamed into MetadataHelper.cs.
