--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-09-22  Martin Baulig  <martin@ximian.com>
+
+	* frontend/ScriptingContext.cs: Some more `TargetClassType' ->
+	`TargetStructType'.
+
+	* frontend/Expression.cs: Likewise.
+
 2009-09-17  Martin Baulig  <martin@ximian.com>
 
 	* languages/TargetClassType.cs: Renamed `TargetClassType' into
