--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-09-22  Martin Baulig  <martin@ximian.com>
+
+	* languages/TargetStructType.cs
+	(TargetStructType.IsClassInitialized): New public property.
+
 2009-08-18  Martin Baulig  <martin@ximian.com>
 
 	Fix #531062; correctly handle methods in compiler-generated files.
