--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2009-09-23  Martin Baulig  <martin@ximian.com>
+
+	* classes/ExpressionEvaluator.cs
+	(EE.EvaluationResult): Add `NotInitialized'.
+
+	* classes/Thread.cs
+	(RuntimeInvokeResult): Add `TargetException'.
+
+	* backend/SingleSteppingEngine.cs
+	(OperationRuntimeInvoke): Set 'RuntimeInvokeResult.TargetException'
+	on error.
+
 2009-09-22  Martin Baulig  <martin@ximian.com>
 
 	* languages/TargetStructType.cs
