Always insert the 'MainMethodBreakpoint' and use it to set the stack pointer. 2009-09-24  Martin Baulig  <martin@ximian.com>
	* classes/DebuggerSession.cs
	(DebuggerSession.ctor): Always insert the `MainMethodBreakpoint';
	we need it to correctly set the stack pointer.

	* backend/SingleSteppingEngine.cs
	(SSE.child_breakpoint): Set `main_retaddr' if we're the
	`MainMethodBreakpoint'.

svn path=/trunk/debugger/; revision=142530

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,16 @@
 	(OperationRuntimeInvoke): Set 'RuntimeInvokeResult.TargetException'
 	on error.
 
+2009-09-24  Martin Baulig  <martin@ximian.com>
+
+	* classes/DebuggerSession.cs
+	(DebuggerSession.ctor): Always insert the `MainMethodBreakpoint';
+	we need it to correctly set the stack pointer.
+
+	* backend/SingleSteppingEngine.cs
+	(SSE.child_breakpoint): Set `main_retaddr' if we're the
+	`MainMethodBreakpoint'.
+
 2009-09-22  Martin Baulig  <martin@ximian.com>
 
 	* languages/TargetStructType.cs
