--- a/symbolwriter/ChangeLog
+++ b/symbolwriter/ChangeLog
@@ -1,3 +1,8 @@
+2009-09-24  Martin Baulig  <martin@ximian.com>
+
+	* MdbSymbolReader.cs: Add `--locals' argument to include code
+	blocks and locals.
+
 2009-08-02  Martin Baulig  <martin@ximian.com>
 
 	* MonoSymbolTable.cs
