--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-09-29  Martin Baulig  <martin@ximian.com>
+
+	* classes/DebuggerSession.cs
+	(DebuggerSession.GetPendingBreakpoints): Small fix; make this work
+	for native applications.
+
 2009-09-23  Martin Baulig  <martin@ximian.com>
 
 	* classes/ExpressionEvaluator.cs
