Use full pathname to invoke mono in the 'mdb' script; don't set MONO_GAC_PREFIX etc. for the child process. 2009-10-08  Martin Baulig  <martin@ximian.com>
	* build/mdb: Use the full pathname to invoke mono.
	* build/mdb-symbolreader: Likewise.

	* backend/ProcessStart.cs
	(ProcessStart.SetupEnvironment): Don't set `MONO_GAC_PREFIX',
	`MONO_PATH', `LD_LIBRARY_PATH' and `PATH'.

svn path=/trunk/debugger/; revision=143785

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2009-10-08  Martin Baulig  <martin@ximian.com>
 
+	* build/mdb: Use the full pathname to invoke mono.
+	* build/mdb-symbolreader: Likewise.
+
+	* backend/ProcessStart.cs
+	(ProcessStart.SetupEnvironment): Don't set `MONO_GAC_PREFIX',
+	`MONO_PATH', `LD_LIBRARY_PATH' and `PATH'.
+
+2009-10-08  Martin Baulig  <martin@ximian.com>
+
 	Improve follow-fork(), allow following exec() without fork()ing
 	first; shell scripts, for instance, use this technique.
 
