--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-10-14  Martin Baulig  <martin@ximian.com>
+
+	* backend/SingleSteppingEngine.cs
+	(SSE.OperationMonoTrampoline): Fix bug #544935; the runtime now
+	supports a new trampoline notification which also gives us the
+	address of the callsite, so we can detect recursive invocations of
+	mono_generic_trampoline().
+
 2009-10-08  Martin Baulig  <martin@ximian.com>
 
 	* build/mdb: Use the full pathname to invoke mono.
