--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,12 @@
 	(DebuggerSession.GetPendingBreakpoints): Small fix; make this work
 	for native applications.
 
+2009-11-05  Martin Baulig  <martin@ximian.com>
+
+	* languages/mono/MonoLanguageBackend.cs
+	(MonoLanguageBackend.Notification): On `LoadModule': don't crash
+	if load_symfile() failed.
+
 2009-09-23  Martin Baulig  <martin@ximian.com>
 
 	* classes/ExpressionEvaluator.cs
