--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,16 @@
 
 2009-09-29  Martin Baulig  <martin@ximian.com>
 
+	* classes/DebuggerConfiguration.cs
+	(DebuggerConfiguration.IsCLI): New public property to check
+	whether we're running the CLI or a GUI.
+
+	* classes/DebuggerSession.cs
+	(DebuggerSession.ctor): Only auto-insert the
+	`MainMethodBreakpoint' in the CLI.
+
+2009-11-25  Martin Baulig  <martin@ximian.com>
+
 	* classes/DebuggerSession.cs
 	(DebuggerSession.GetPendingBreakpoints): Small fix; make this work
 	for native applications.
