--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-01-08  Martin Baulig  <martin@ximian.com>
+
+	Fix #510995.
+
+	* frontend/Expression.cs
+	(CastExpression.DoCast): Allow `object' -> 'object'.
+	(Convert.ImplicitConversion): Allow `string' -> `object'.
+
 2009-10-14  Martin Baulig  <martin@ximian.com>
 
 	* backend/SingleSteppingEngine.cs
