--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-02-23  Martin Baulig  <martin@ximian.com>
+
+	* backend/os/DwarfReader.cs
+	(DwarfReader): Don't crash, if the .debug_aranges,
+	.debug_pubnames, .debug_pubtypes or .debug_str section is
+	missing.
+
 2010-01-08  Martin Baulig  <martin@ximian.com>
 
 	Fix #559045.
