--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-02-24  Martin Baulig  <martin@ximian.com>
+
+	* backend/server/x86_64-arch.c
+	(server_ptrace_call_method_invoke): Set correct return address to
+	make this work even if the stack is executable.
+
 2010-02-23  Martin Baulig  <martin@ximian.com>
 
 	* backend/SingleSteppingEngine.cs
